feat: 全局状态持久化

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </style>
     <script>
       (() => {
-        const colorScheme = localStorage.getItem('colorScheme') || 'auto';
+        const colorScheme = localStorage.getItem('Cosey:colorScheme') || 'auto';
 
         const isDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
 
